--- a/style.css
+++ b/style.css
@@ -1,35 +1,50 @@
 :root{
-    --text:#ffffff;
+    --text: #000000;
     --text-selected: #f8fbb9;
-    --back-darker:#18181d;
-    --back-dark:#1e1e25;
-    --back: #1a1a21;
-    --back-light: #1f1f27;
-    --back-lighter: #23232c;
-    --button:#22222c;
+    --back-darker: #cecece;
+    --back-dark: #e0e0e0;
+    --back: #eaeaea;
+    --back-light: #f6f6f6;
+    --back-lighter: #ffffff;
+    --button:#e0e0e0;
 }
 
 *{
     margin:0;
     padding:0;
+    user-select: none;
+    font-family:'Work Sans';
 }
 
 body{
     background-color: var(--back);
     padding: 0;
     margin: 0;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
     display: none;
 }
-body{
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
 
 /* Header */
+#header{
+    font-size:40px;
+    text-shadow: 0px 0px 5px rgb(255, 255, 255);
+}
+
+h1{
+    font-family: 'Signika';
+    color:#d1cdff8a;
+    transition: 0.25s;
+}
+
+h1:hover{
+    text-shadow: 0px 0px 5px #b9b9b9, 0px 0px 10px rgba(154, 154, 154, 0.54);
+}
+
 #header-body{
     display:flex;
     justify-content:right;
@@ -39,9 +54,7 @@ body{
 #header-text{
     color: var(--text);
     width: 100%;
-    margin:0;
-    margin-top: 10px;
-    margin-left: 40px;
+    margin: 10px 0 0 40px;
     height: 60px;
     text-shadow: 0px 0px 2.5px rgb(255, 255, 255), 0px 0px 5px #adadadbe, 0px 0px 10px #ffffffab, 0px 0px 20px #ffffff80;
     -webkit-user-select: none;
@@ -90,39 +103,50 @@ body{
 }
 
 .content-text-container{
-    padding: 0px 50px;
+    padding: 0px 30px;
+    margin: 0px 50px;
+    padding: 20px 30px;
 }
 
 .content-images{
     transition-timing-function: ease;
     transition: 0.5s;
     height: 373px;
-    transform: scale(1);
-    border-radius: 50px;
-    border: 20px solid var(--back-dark);
+    background-color: var(--back);
+    padding: 15px;
+    border-radius: 30px;
+    transition: 0.2s;
+    border: 8px solid var(--back);
     box-shadow:
-    -9px -9px 15px #3b3b456c,
-    9px 9px 15px #00000092;
+    -9px -9px 15px rgb(255, 255, 255),
+    9px 9px 15px rgb(196, 196, 196);
 }
 
-.content-images-dark{
-    border: 20px solid var(--back);
+.content-images-light{
+    transition-timing-function: ease;
+    transition: 0.5s;
+    height: 373px;
+    background-color: var(--back);
+    padding: 15px;
+    border-radius: 30px;
+    transition: 0.2s;
+    border: 8px solid var(--back);
+    box-shadow:
+    -9px -9px 15px rgb(255, 255, 255),
+    9px 9px 15px rgb(196, 196, 196);
 }
 
-.content-images:hover{
-    /* width: 52%; */
-    animation: content-image-hover 0.5s;
-    transform: scale(1.03);
-    border-radius: 0px;
-}
+/* .content-images-dark{
+    
+} */
 
-@keyframes content-image-hover {
-    from {
-        transform: scale(1);
-    }
-    to{
-        transform: scale(1.03);
-    }
+.content-images:hover,.content-images-light:hover{
+    box-shadow:
+            -9px -9px 15px rgb(255, 255, 255),
+            9px 9px 15px rgb(196, 196, 196),
+            inset -9px -9px 15px rgb(255, 255, 255),
+            inset 9px 9px 15px rgb(196, 196, 196);
+    transform: translateY(2px);
 }
 
 /* Grid */
@@ -147,40 +171,28 @@ body{
     width: 250px;
     border: 8px solid var(--back);
     box-shadow:
-    -9px -9px 15px #3b3b456c,
-    9px 9px 15px #00000092;
+            -9px -9px 15px rgb(255, 255, 255),
+            9px 9px 15px rgb(196, 196, 196);
 }
 
 .grid-item:hover{
     border: 8px solid var(--back);
     box-shadow:
-    -9px -9px 15px #3b3b456c,
-    9px 9px 15px #00000092,
-    inset -9px -9px 15px #3b3b456c,
-    inset 9px 9px 15px #00000092;
+            -9px -9px 15px rgb(255, 255, 255),
+            9px 9px 15px rgb(196, 196, 196),
+            inset -9px -9px 15px rgb(255, 255, 255),
+            inset 9px 9px 15px rgb(196, 196, 196);
     transform: translateY(2px);
 }
 
 .grid-item>h1{
-    color: white;
+    color: black;
     text-align: center;
     flex-wrap: wrap;
     padding-top: 20px;
     transition: 0.2s;
     font-size: 2vw;
     user-select: none;
-}
-
-.grid-item>p{
-    user-select: none;
-}
-
-.grid-item>h1:hover{
-    color: white;
-    text-align: center;
-    flex-wrap: wrap;
-    transition: 0.2s;
-    font-size: 2.4vw;
 }
 
 .grid-item>img{
@@ -203,11 +215,22 @@ body{
     text-align: left;
 }
 
-
 .text{
     color: var(--text);
 }
 
 .text-glow{
-    text-shadow: 0px 0px 2.5px rgb(255, 255, 255), 0px 0px 5px #adadadbe, 0px 0px 10px #ffffffab, 0px 0px 20px #ffffff80;
+    text-shadow: 0px 0px 3px rgb(255, 255, 255), 0px 0px 5px #adadadbe, 0px 0px 10px #ffffffab, 0px 0px 20px #ffffff80;
+}
+
+.soft-inside{
+    border-radius: 50px;
+    border: 20px solid var(--back-dark);
+    box-shadow:
+            -9px -9px 15px rgb(255, 255, 255),
+            9px 9px 15px rgb(196, 196, 196);
+}
+
+p,ul{
+  font-size: 25px;
 }
